refs #24651; fix mc-collapse, button in global styles

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -59,10 +59,8 @@ label,
 select,
 textarea {
   touch-action: manipulation;
-  //margin: 0;
 }
 
-button,
 input {
   overflow: visible;
   text-transform: none;
